// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Board /> is empty by default 1`] = `
<Board
  matrix={
    Immutable.List [
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
      Immutable.List [
        " ",
        " ",
        " ",
        " ",
      ],
    ]
  }
>
  <div
    className="box"
    id="board"
  >
    <table>
      <tbody>
        <Row
          key="0"
          letters={
            Immutable.List [
              " ",
              " ",
              " ",
              " ",
            ]
          }
        >
          <tr>
            <Cell
              key="0"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="1"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="2"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="3"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
          </tr>
        </Row>
        <Row
          key="1"
          letters={
            Immutable.List [
              " ",
              " ",
              " ",
              " ",
            ]
          }
        >
          <tr>
            <Cell
              key="0"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="1"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="2"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="3"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
          </tr>
        </Row>
        <Row
          key="2"
          letters={
            Immutable.List [
              " ",
              " ",
              " ",
              " ",
            ]
          }
        >
          <tr>
            <Cell
              key="0"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="1"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="2"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="3"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
          </tr>
        </Row>
        <Row
          key="3"
          letters={
            Immutable.List [
              " ",
              " ",
              " ",
              " ",
            ]
          }
        >
          <tr>
            <Cell
              key="0"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="1"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="2"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
            <Cell
              key="3"
              letter=" "
            >
              <td>
                 
              </td>
            </Cell>
          </tr>
        </Row>
      </tbody>
    </table>
  </div>
</Board>
`;

exports[`<Board /> is filled when the game has started 1`] = `
<Board
  matrix={
    Immutable.List [
      Immutable.List [
        "E",
        "H",
        "R",
        "T",
      ],
      Immutable.List [
        "B",
        "I",
        "T",
        "E",
      ],
      Immutable.List [
        "G",
        "I",
        "S",
        "F",
      ],
      Immutable.List [
        "A",
        "M",
        "N",
        "O",
      ],
    ]
  }
>
  <div
    className="box"
    id="board"
  >
    <table>
      <tbody>
        <Row
          key="0"
          letters={
            Immutable.List [
              "E",
              "H",
              "R",
              "T",
            ]
          }
        >
          <tr>
            <Cell
              key="0"
              letter="E"
            >
              <td>
                E
              </td>
            </Cell>
            <Cell
              key="1"
              letter="H"
            >
              <td>
                H
              </td>
            </Cell>
            <Cell
              key="2"
              letter="R"
            >
              <td>
                R
              </td>
            </Cell>
            <Cell
              key="3"
              letter="T"
            >
              <td>
                T
              </td>
            </Cell>
          </tr>
        </Row>
        <Row
          key="1"
          letters={
            Immutable.List [
              "B",
              "I",
              "T",
              "E",
            ]
          }
        >
          <tr>
            <Cell
              key="0"
              letter="B"
            >
              <td>
                B
              </td>
            </Cell>
            <Cell
              key="1"
              letter="I"
            >
              <td>
                I
              </td>
            </Cell>
            <Cell
              key="2"
              letter="T"
            >
              <td>
                T
              </td>
            </Cell>
            <Cell
              key="3"
              letter="E"
            >
              <td>
                E
              </td>
            </Cell>
          </tr>
        </Row>
        <Row
          key="2"
          letters={
            Immutable.List [
              "G",
              "I",
              "S",
              "F",
            ]
          }
        >
          <tr>
            <Cell
              key="0"
              letter="G"
            >
              <td>
                G
              </td>
            </Cell>
            <Cell
              key="1"
              letter="I"
            >
              <td>
                I
              </td>
            </Cell>
            <Cell
              key="2"
              letter="S"
            >
              <td>
                S
              </td>
            </Cell>
            <Cell
              key="3"
              letter="F"
            >
              <td>
                F
              </td>
            </Cell>
          </tr>
        </Row>
        <Row
          key="3"
          letters={
            Immutable.List [
              "A",
              "M",
              "N",
              "O",
            ]
          }
        >
          <tr>
            <Cell
              key="0"
              letter="A"
            >
              <td>
                A
              </td>
            </Cell>
            <Cell
              key="1"
              letter="M"
            >
              <td>
                M
              </td>
            </Cell>
            <Cell
              key="2"
              letter="N"
            >
              <td>
                N
              </td>
            </Cell>
            <Cell
              key="3"
              letter="O"
            >
              <td>
                O
              </td>
            </Cell>
          </tr>
        </Row>
      </tbody>
    </table>
  </div>
</Board>
`;
